k8s/dropper-dev/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: dropper-wayl-one
  name: dropper-wayl-one
  namespace: dropper-dev
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    service: dropper-wayl-one
---
apiVersion: v1
kind: Namespace
metadata:
  name: dropper-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: dropper-wayl-one
  name: dropper-wayl-one
  namespace: dropper-dev
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      service: dropper-wayl-one
  template:
    metadata:
      labels:
        service: dropper-wayl-one
    spec:
      containers:
        - image: registry.wayl.one/dropper:0.0.54
          imagePullPolicy: IfNotPresent
          name: dropper-wayl-one
          command:
            - "/bin/sh"
            - "-c"
          args:
            - >-
              alembic upgrade head &&
              opentelemetry-instrument uvicorn dropper.api.main:app --host 0.0.0.0 --port 8000 --workers 1
          ports:
            - containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 300
            periodSeconds: 20
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: "200m"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "4Gi"
          volumeMounts:
            - mountPath: /data
              name: dropper-data
            - mountPath: /cache
              name: dropper-cache
      volumes:
        - name: dropper-data
          persistentVolumeClaim:
            claimName: dropper-data-rwx
        - name: dropper-cache
          emptyDir: {}
      imagePullSecrets:
        - name: cluster-regcred
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dropper-wayl-one
  namespace: dropper-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # traefik.ingress.kubernetes.io/router.middlewares: >
    #   dropper-dev-dropper-ratelimit@kubernetescrd,
spec:
  rules:
    - host: dropper-dev.wayl.one
      http:
        paths:
          - backend:
              service:
                name: dropper-wayl-one
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dropper.wayl.one
      secretName: dropper-cert-tls
---
apiVersion: traefik.io/v1alpha1 # if this errors, try traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dropper-ratelimit
  namespace: dropper-dev
spec:
  rateLimit:
    # "Fair" traffic per client (per IP by default)
    average: 20 # 20 req/sec average
    burst: 40 # allow short spikes
    period: 1s # (optional, default is 1s)

    # How Traefik groups requests by "client"
    sourceCriterion:
      ipStrategy:
        depth: 2 # useful if you're behind a proxy setting X-Forwarded-For
